# OF3-metadynamics

./: CITATION.cff  CONTRIBUTING  README.md  ckpt_root  pixi.toml  pyproject.toml  runner_no_ds.yml
deepspeed_configs/: ds_stage2_default.json  ds_stage2_default_offload.json
devtools/: install_cuda.sh
docker/: DOCKER.md  Dockerfile.pixi  Dockerfile.update-reqs
docs/: Makefile  README.md
docs/imgs/: msa-pipeline-diagram.excalidraw  pixi-environments-and-features.excalidraw
docs/source/: Installation.md  configuration_reference.md  contribution.md  index.md  inference.md  kernels.md  modern-conda-environments-with-pixi.md  parameters_reference.md  precomputed_msa_explanation.md  template_explanation.md  template_how_to.md  training.md
environments/: production-amd-linux-64.yml
examples/colabfold_msa_alignment/: msa_server.yml
examples/example_inference_inputs/: query_dna_ptm.json  query_homomer.json  query_multimer.json  query_protein_ligand.json  query_protein_ligand_multiple.json  query_single_protein_single_ligand.json  query_ubiquitin.json
examples/example_runner_yamls/: affinity.yaml  cuequivariance.yml  low_mem.yml  multiple_gpu.yml  osx.yaml  output_settings.yml  save_msa_output.yml  triton.yml
examples/reference_full_config/: full_config.yml
examples/training_yamls/: finetune_1.yml  finetune_2.yml  initial_training.yml
openfold3/: __init__.py  run_openfold.py  setup_openfold.py
openfold3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openfold3/core/config/: config_utils.py
openfold3/core/data/framework/: data_module.py
openfold3/core/data/framework/single_datasets/: base_of3.py  dataset_utils.py  monomer.py  pdb.py  validation.py
openfold3/core/data/io/: dataset_cache.py
openfold3/core/data/io/structure/: cif.py
openfold3/core/data/tools/: colabfold_msa_server.py  rscb.py  utils.py
openfold3/core/kernels/: cueq_utils.py
openfold3/core/kernels/triton/: evoformer.py
openfold3/core/metadynamics/: base.py
openfold3/core/metadynamics/cv/: rg.py
openfold3/core/metadynamics/potentials/: metadynamics.py
openfold3/core/model/heads/: head_modules.py  prediction_heads.py
openfold3/core/model/latent/: base_blocks.py  base_stacks.py  evoformer.py  msa_module.py  pairformer.py  template_module.py
openfold3/core/model/layers/: attention_pair_bias.py  diffusion_transformer.py  msa.py  triangular_attention.py  triangular_multiplicative_update.py
openfold3/core/model/primitives/: attention.py
openfold3/core/model/structure/: diffusion_module.py
openfold3/core/runners/: writer.py
openfold3/core/utils/: chunk_utils.py  permutation_alignment.py  script_utils.py
openfold3/entry_points/: experiment_runner.py  import_utils.py  parameters.py  validate_rocm.py  validator.py
openfold3/projects/of3_all_atom/: model.py  project_entry.py
openfold3/projects/of3_all_atom/config/: model_config.py  model_setting_presets.yml
openfold3/tests/: __init__.py  compare_utils.py  conftest.py  model_utils.py  test_embedders.py  test_entry_points.py  test_heads.py  test_inference_full.py  test_kernels.py  test_model_checkpoint.py  test_of3_model.py  test_primitives.py  test_triangular_attention.py  test_triangular_multiplicative_update.py  test_writer.py
openfold3/tests/core/model/: test_metadynamics.py  test_sampler_with_potentials.py
openfold3/tests/core/utils/: test_permutation_alignment.py
openfold3/tests/scripts/data_preprocessing/: test_preparse_alignments_of3.py
openfold3/tests/test_data/structure_from_query/: README.md  structure-w-ref-mols_non-std-peptide.pkl  structure-w-ref-mols_std-peptide.pkl
scripts/: quick_rg.py  run_baseline.py  run_metadynamics.py  validate_msas.py
scripts/analysis/: run_ost.py
scripts/data_preprocessing/: collect_preprocessed_fastas.py  convert_cache_to_lmdb.py  create_RNA-monomer_training_dataset_cache.py  create_pdb-weighted_training_dataset_cache.py  create_pdb_validation_dataset_cache.py  create_protein-monomer_training_dataset_cache.py  cross_validate_atomarray_msa.py  preparse_alignments_of3.py  preparse_monomer_msas_from_s3.py  preparse_monomer_structures_from_s3.py  preprocess_ccd_biotite.py  preprocess_pdb_disordered_of3.py  preprocess_pdb_of3.py  preprocess_template_alignments_new_of3.py  preprocess_template_alignments_precache_of3.py  preprocess_template_structures_of3.py  run_data_pipeline_treadmill.py
scripts/dev/: build_release_date_cache.py  check_release_dates.py  convert_compiled_weights.py
scripts/snakemake_msa/: MSA_Snakefile  aln_env.yml  download_of3_databases.py  example_fasta_RNA.fasta  example_fasta_protein.fasta  example_msa_config_RNA.json  example_msa_config_protein.json  test_download_of3_databases.py
(+95 files in other folders)
