[build-system]
# torch used at build needs to match the one at runtime
requires = ["setuptools", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "openfold3"
dynamic = ["version"]
authors = [
    { name = "OpenFold Team", email = "support@openfold.io" }
]
description = "OpenFold's Biological Structure Prediction Model based on DeepMind's AlphaFold 3"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls.Homepage = "https://openfold.io/"
urls.Documentation = "https://openfold-3.readthedocs.io/en/latest/"
urls.Repository = "https://github.com/aqlaboratory/openfold-3"
urls.Issues = "https://github.com/aqlaboratory/openfold-3/issues"

requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "torch", # ==2.5.1",
    "ml-collections",
    "pytorch-lightning >=2.1",
    "biotite",
    "rdkit",
    "pdbeccdutils",
    "kalign-python",
    "requests",
    "awscli",
    "awscrt",
    "boto3",
    "PyYAML",
    "ijson",
    "memory_profiler",
    "wandb",
    "func_timeout",
    "tqdm",
    "typing-extensions",
    "lmdb", # == 1.6  # This verison might be required to avoid Error during training
]

optional-dependencies.dev = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-regressions",
    "ruff",
    "pre-commit",

    # used for documentation
    "sphinx",
    "myst-parser",
    "furo"
]
optional-dependencies.cuequivariance = [
    "cuequivariance>=0.6.1,<0.8",
    "cuequivariance-ops-torch-cu12>=0.6.1,<0.8",
    "cuequivariance-torch>=0.6.1,<0.8",
    "torch>=2.7",
]
optional-dependencies.deepspeed = [
    "deepspeed>=0.18.7",
]

[project.scripts]
run_openfold="openfold3.run_openfold:cli"
setup_openfold="openfold3.setup_openfold:main"
validate-openfold3-rocm="openfold3.entry_points.validate_rocm:main"

# Let's take a decision if these are optional-dependencies or dependency-groups
# See: https://github.com/astral-sh/uv/issues/9011
# Leaving here to not break ongoing docker revamp efforts
[dependency-groups]
test = [
    "pytest",
    "ruff",
    "awscli",
    "aria2",
    "pytest-xdist",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-regressions",
    "pytest-recording",
    "debugpy",
]


[tool.setuptools_scm]
fallback_version = "0.4.1-dev"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["openfold3*", "scripts*"]

[tool.setuptools.package-data]
openfold3 = [
    "projects/*/config/*.yml",
    "tests/test_data/**/*",
    "scripts/*.sh"
]

# much of the cibuildwheel config taken from benfred/implicit
[tool.cibuildwheel]
before-all = "devtools/install_cuda.sh"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.linux]
repair-wheel-command = """
AUDITWHEEL_PLAT=manylinux2014_$(uname -m) \
auditwheel repair \
    --exclude libc10.so \
    --exclude libtorch.so \
    --exclude libtorch_cpu.so \
    --exclude libtorch_python.so \
    -w {dest_dir} {wheel}
"""

[tool.cibuildwheel.linux.environment]
CUDACXX = "/usr/local/cuda/bin/nvcc"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "E741",
    "SIM108",
    "B905",  # explicit strict= for zip
]
extend-safe-fixes = ["UP006"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["E501"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["openfold3/tests"]
python_files = ["test_*.py"]
markers = [
    "inference_verification: Tests to verify installation on inference example",
    "slow: Large size test"
]

# Exclude directories during collection
[tool.coverage.run]
omit = [
    "openfold3/tests/*",
]

# Exclude directories from reporting
[tool.coverage.report]
omit = [
    "openfold3/tests/*",
]

# Map /opt/openfold3/openfold3/ (docker path) to openfold3/ (local path) during `coverage combine`
[tool.coverage.paths]
source = [
    "openfold3/",
    "/opt/openfold3/openfold3/",
]
